--- a/Frontend/ecommerce-app/src/app/product-view/product-view.component.html
+++ b/Frontend/ecommerce-app/src/app/product-view/product-view.component.html
@@ -2,20 +2,34 @@
     <div class="row justify-content-center text-center">
         <div class="col-md-8 col-lg-8">
             <div class="header">
-                <h3 style="color: white; font: size 23px;">Popular E-commerce products</h3>
+                <h3 style="color: white; font-size: 23px;">Popular E-commerce products</h3>
             </div>
         </div>
     </div>
-</div>
-
-<div class="card" style="width: 18rem;">
-    <div class="card-body">
-      <h5 class="card-title">Product name</h5>
-      <h6 class="card-price">Product Price</h6>
-      <p class="card-text">Product description</p>
-      <p class="card-text">Product brand</p>
-      <p class ="card-text">Colors</p>
+    <div class="row justify-content-center text-center">
+        <div class="col-md-3">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Product name</h5>
+                    <h6 class="card-price">Product Price</h6>
+                    <p class="card-text">Product description</p>
+                    <p class="card-text">Product brand</p>
+                    <p class="card-text">Colors</p>
+                    <a href="#" class="btn btn-primary">Add to cart</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Product name</h5>
+                    <h6 class="card-price">Product Price</h6>
+                    <p class="card-text">Product description</p>
+                    <p class="card-text">Product brand</p>
+                    <p class="card-text">Colors</p>
+                    <a href="#" class="btn btn-primary">Add to cart</a>
+                </div>
+            </div>
+        </div>
     </div>
-      <a href="#" class="btn btn-primary">Add to cart</a>
-
 </div>
