--- a/Frontend/ecommerce-app/src/app/signup-view/signup-view.component.html
+++ b/Frontend/ecommerce-app/src/app/signup-view/signup-view.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <form>
     
       <label>Name</label>
@@ -6,7 +7,7 @@
       <label>Email</label>
       <input type="email" class="form-control" placeholder="Enter email" #email>
 
-      <label><Address></Address></label>
+      <label>Address</label>
       <input type="text" class="form-control" placeholder="Enter address" #address>
 
       <label>Password</label>
@@ -15,6 +16,6 @@
       <button type="button" class="btn btn-primary" (click)="signUpUser(name,email,address,password)">Sign up</button>
 
 </form>  
-
+<p >{{feedbackMessage}}</p>
 <button (click)="goBack()">Go back</button>
-
+</div>
