changed session response in order to know the users name

--- a/Frontend/ecommerce-app/src/app/product-view/product-view.component.html
+++ b/Frontend/ecommerce-app/src/app/product-view/product-view.component.html
@@ -27,3 +27,4 @@
 
 <button (click)="openSignUpMenu()">Sign up</button>
 <button (click)="openSignInMenu()">Sign in</button>	
+<button (click)="seeLoggedInfo()">Log info</button>
