--- a/Frontend/ecommerce-app/src/app/product-view/product-view.component.html
+++ b/Frontend/ecommerce-app/src/app/product-view/product-view.component.html
@@ -28,3 +28,4 @@
 <button (click)="openSignUpMenu()">Sign up</button>
 <button (click)="openSignInMenu()">Sign in</button>	
 <button (click)="seeLoggedInfo()">Log info</button>
+<button (click)="logout()">Logout</button>
