--- a/Frontend/ecommerce-app/src/app/product-view/product-view.component.html
+++ b/Frontend/ecommerce-app/src/app/product-view/product-view.component.html
@@ -1,19 +1,67 @@
-<div class="container-fluid" style="background-color: black;">
-    <div class="row justify-content-center text-center">
-        <div class="col-md-8 col-lg-8">
-            <div class="header">
-                <h3 style="color: white; font-size: 23px;">Popular E-commerce products</h3>
-            </div>
-        </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            </li>
+        </ul>
     </div>
+</nav>
+
+<div class="search">
+    <label>Name</label>
+    <input type="text" placeholder="Name" #name>
+
+    <label>Brand</label>
+    <input type="text" placeholder="Brand" #brand>
+
+    <label>Category</label>
+    <input type="text" placeholder="Category" #category>
+
+    <label>Operation</label>
+
+    <div>
+        <input type="radio" name="operation" checked (click)="this.operation='or'"/>
+        <label>or</label>
+    </div>
+
+    <div>
+        <input type="radio" name="operation" (click)="this.operation='and'"/>
+        <label>and</label>
+    </div>
+
+    <button (click)="displayFilteredProducts(name.value, brand.value,category.value)">Search</button>
+
+</div>
+
+
+<div class="container-fluid" style="background-color: black;">
+
     <div class="row justify-content-center text-center">
         <div class="col-md-3" *ngFor="let product of data">
             <div class="card" style="width: 18rem;">
                 <div class="card-body">
                     <h5 class="card-title">{{ product.name }}</h5>
                     <h6 class="card-price">${{product.price }}</h6>
+
                     <p class="card-text">{{ product.brand.name }}</p>
                     <p class="card-text">{{ product.description }}</p>
+                    <p class="card-text">{{ product.category.name }}</p>
+
                     <p class="card-text">Colors:</p>
                     <ul class="list-group list-unstyled">
                         <li class="card-text-colours" *ngFor="let c of product.colours">{{c.name}}</li>
@@ -26,6 +74,6 @@
 </div>
 
 <button (click)="openSignUpMenu()">Sign up</button>
-<button (click)="openSignInMenu()">Sign in</button>	
+<button (click)="openSignInMenu()">Sign in</button>
 <button (click)="seeLoggedInfo()">Log info</button>
 <button (click)="logout()">Logout</button>
