--- a/Frontend/ecommerce-app/src/app/product-view/product-view.component.html
+++ b/Frontend/ecommerce-app/src/app/product-view/product-view.component.html
@@ -1,50 +1,68 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Dropdown
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          </li>
         </ul>
+        <form class="d-flex">
+          <button class="btn btn-outline-success" type="submit" (click)="openSignInMenu()">Log in</button>
+          <button class="btn btn-outline-success" type="submit" (click)="openSignUpMenu()">Sign up</button>          
+        </form>
+      </div>
     </div>
-</nav>
+  </nav>
+
 
 <div class="search">
     <label>Name</label>
-    <input type="text" placeholder="Name" #name>
+    <input class="form-control me-2" type="search"  placeholder="Name" #name>
 
     <label>Brand</label>
-    <input type="text" placeholder="Brand" #brand>
+    <input class="form-control me-2" type="search" placeholder="Brand" #brand>
 
     <label>Category</label>
-    <input type="text" placeholder="Category" #category>
+    <input class="form-control me-2" type="search" placeholder="Category" #category>
 
     <label>Operation</label>
 
-    <div>
-        <input type="radio" name="operation" checked (click)="this.operation='or'"/>
-        <label>or</label>
-    </div>
+<div class="form-check">
+    <input class="form-check-input" name="operation" type="radio" checked (click)="this.operation='or'">
+    <label class="form-check-label" for="flexRadioDefault1">
+      Or
+    </label>
+  </div>
+  <div class="form-check">
+    <input class="form-check-input" name="operation" type="radio" (click)="this.operation='and'">
+    <label class="form-check-label" for="flexRadioDefault2">
+      And
+    </label>
+  </div>
 
-    <div>
-        <input type="radio" name="operation" (click)="this.operation='and'"/>
-        <label>and</label>
-    </div>
-
-    <button (click)="displayFilteredProducts(name.value, brand.value,category.value)">Search</button>
+   <button class="btn btn-outline-success" type="submit" (click)="displayFilteredProducts(name.value, brand.value,category.value)">Search</button>
+   <button class="btn btn-outline-dark" type="submit" (click)="displayProducts()">Reset filters</button>
 
 </div>
 
