--- a/Frontend/ecommerce-app/src/app/product-view/product-view.component.html
+++ b/Frontend/ecommerce-app/src/app/product-view/product-view.component.html
@@ -1,54 +1,17 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <button class="btn btn-outline-success" type="submit" (click)="openSignInMenu()">Log in</button>
-          <button class="btn btn-outline-success" type="submit" (click)="openSignUpMenu()">Sign up</button>          
-        </form>
-      </div>
-    </div>
-  </nav>
 
+<div class="form-horizontal">
+  <label>Name</label>
+  <input class="form-control me-2" type="search" placeholder="Name" #name>
 
-<div class="search">
-    <label>Name</label>
-    <input class="form-control me-2" type="search"  placeholder="Name" #name>
+  <label>Brand</label>
+  <input class="form-control me-2" type="search" placeholder="Brand" #brand>
 
-    <label>Brand</label>
-    <input class="form-control me-2" type="search" placeholder="Brand" #brand>
+  <label>Category</label>
+  <input class="form-control me-2" type="search" placeholder="Category" #category>
 
-    <label>Category</label>
-    <input class="form-control me-2" type="search" placeholder="Category" #category>
+  <label>Operation</label>
 
-    <label>Operation</label>
-
-<div class="form-check">
+  <div class="form-check">
     <input class="form-check-input" name="operation" type="radio" checked (click)="this.operation='or'">
     <label class="form-check-label" for="flexRadioDefault1">
       Or
@@ -61,37 +24,37 @@
     </label>
   </div>
 
-   <button class="btn btn-outline-success" type="submit" (click)="displayFilteredProducts(name.value, brand.value,category.value)">Search</button>
-   <button class="btn btn-outline-dark" type="submit" (click)="displayProducts()">Reset filters</button>
+  <button class="btn btn-outline-success" type="submit"
+    (click)="displayFilteredProducts(name.value, brand.value,category.value)">Search</button>
+  <button class="btn btn-outline-dark" type="submit" (click)="displayProducts()">Reset filters</button>
 
 </div>
-
 
 <div class="container-fluid" style="background-color: black;">
 
-    <div class="row justify-content-center text-center">
-        <div class="col-md-3" *ngFor="let product of data">
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">{{ product.name }}</h5>
-                    <h6 class="card-price">${{product.price }}</h6>
+  <div class="row justify-content-center text-center">
+    <div class="col-md-3" *ngFor="let product of data">
+      <div class="card" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">{{ product.name }}</h5>
+          <h6 class="card-price">${{product.price }}</h6>
 
-                    <p class="card-text">{{ product.brand.name }}</p>
-                    <p class="card-text">{{ product.description }}</p>
-                    <p class="card-text">{{ product.category.name }}</p>
+          <p class="card-text">{{ product.brand.name }}</p>
+          <p class="card-text">{{ product.description }}</p>
+          <p class="card-text">{{ product.category.name }}</p>
 
-                    <p class="card-text">Colors:</p>
-                    <ul class="list-group list-unstyled">
-                        <li class="card-text-colours" *ngFor="let c of product.colours">{{c.name}}</li>
-                    </ul>
-                    <a href="#" class="btn btn-primary">Add to cart</a>
-                </div>
-            </div>
+          <p class="card-text">Colors:</p>
+          <ul class="list-group list-unstyled">
+            <li class="card-text-colours" *ngFor="let c of product.colours">{{c.name}}</li>
+          </ul>
+          <a href="#" class="btn btn-primary">Add to cart</a>
         </div>
+      </div>
     </div>
+  </div>
 </div>
 
-<button (click)="openSignUpMenu()">Sign up</button>
-<button (click)="openSignInMenu()">Sign in</button>
+
 <button (click)="seeLoggedInfo()">Log info</button>
 <button (click)="logout()">Logout</button>
+<button id="adminMenu" class="unhidden" (click)="displayAdminMenu()">Admin menu</button>
