--- a/Frontend/ecommerce-app/src/app/admin-view/admin-view.component.html
+++ b/Frontend/ecommerce-app/src/app/admin-view/admin-view.component.html
@@ -1,31 +1,34 @@
 <app-nav-bar-view></app-nav-bar-view>
 
-<table class="table">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td colspan="2">Larry the Bird</td>
-        <td>@twitter</td>
-      </tr>
-    </tbody>
-  </table>
+<div class="mb-3">
+    <label for="exampleFormControlInput1" class="form-label" >Product Name</label>
+    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="name" #name>
+</div>
+
+<div class="mb-3">
+    <label for="exampleFormControlInput1" class="form-label" >Description</label>
+    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="description" #desc>
+</div>
+
+<div class="mb-3">
+    <label for="exampleFormControlInput1" class="form-label" >Price</label>
+    <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="price" #price>
+</div>
+
+<div class="mb-3">
+    <label for="exampleFormControlInput1" class="form-label" >Brand</label>
+    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="brand" #brand>
+</div>
+
+<div class="mb-3">
+    <label for="exampleFormControlInput1" class="form-label" >Category</label>
+    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="category" #category>
+</div>
+
+<div class="mb-3">
+    <label for="exampleFormControlInput1" class="form-label" >Colours (separate colours between commas)</label>
+    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="colours" #colours>
+</div>
+
+<button type="button" class="btn btn-primary" (click)="createProduct(name,desc,price,brand,category,colours)">Create product</button>
+<p>{{feedback}}</p>
