--- a/Frontend/ecommerce-app/src/app/product-view/product-view.component.html
+++ b/Frontend/ecommerce-app/src/app/product-view/product-view.component.html
@@ -1,4 +1,5 @@
 
+<p>Sesion: {{session}}</p>
 <div class="form-horizontal">
   <label>Name</label>
   <input class="form-control me-2" type="search" placeholder="Name" #name>
