--- a/Frontend/ecommerce-app/src/app/update-product-view/update-product-view.component.html
+++ b/Frontend/ecommerce-app/src/app/update-product-view/update-product-view.component.html
@@ -33,3 +33,5 @@
   </form>
 
   <button class="btn btn-primary" (click)="updateProduct(id,name,desc,pric,brand,category,colours)">Update changes</button>
+  <button class="btn btn-primary" (click)="goBack()">Go Back</button>
+  <p>{{feedback}}</p>
