--- a/Frontend/ecommerce-app/src/app/nav-bar-view/nav-bar-view.component.html
+++ b/Frontend/ecommerce-app/src/app/nav-bar-view/nav-bar-view.component.html
@@ -36,7 +36,7 @@
           <button class="btn btn-outline-success" type="submit" (click)="openSignUpMenu()">Sign up</button>
         </form>
         <form class="d-flex" class="loggedOptions">
-            <button class="btn btn-outline-success"  value="YOUR NAME">"Your name"</button>
+            <button class="btn btn-outline-success">YOUR NAME</button>
           </form>
       </div>
     </div>
