finished creation of user by admin

--- a/Frontend/ecommerce-app/src/app/admin-view/admin-view.component.html
+++ b/Frontend/ecommerce-app/src/app/admin-view/admin-view.component.html
@@ -33,7 +33,6 @@
 <button type="button" class="btn btn-primary" (click)="createProduct(name,desc,price,brand,category,colours)">Create product</button>
 <p>{{feedback}}</p>
 
-<button (click)="goBack()" class="btn btn-primary" id="back">Go back</button>
 
 <!--Get Products-->
 <h1>BuscarProducto por id</h1>
@@ -98,3 +97,5 @@
   </table>
 
 
+<button (click)="goBack()" class="btn btn-primary" id="back">Go back</button>
+<button (click)="createUser()" class="btn btn-primary">Create new user</button>
