--- a/Frontend/ecommerce-app/src/app/nav-bar-view/nav-bar-view.component.html
+++ b/Frontend/ecommerce-app/src/app/nav-bar-view/nav-bar-view.component.html
@@ -11,16 +11,16 @@
             <a class="nav-link active" aria-current="page" routerLink="">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Link</a>
+            <a class="nav-link active" routerLink="admin" *ngIf="this.isAdmin()">Admin menu</a>
           </li>
-          <li class="nav-item dropdown">
+          <li class="nav-item dropdown" *ngIf="this.isAdmin()">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
               aria-expanded="false">
-              Dropdown
+              Admin menu (2)
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Users</a></li>
+              <li><a class="dropdown-item" href="#">Products</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
