--- a/Frontend/ecommerce-app/src/app/product-view/product-view.component.css
+++ b/Frontend/ecommerce-app/src/app/product-view/product-view.component.css
@@ -4,7 +4,6 @@ body{
     line-height: 1.5385;
     color : #333;
     text-align: left;
-    background-color: #2196f3;
 }
 .search {
   display: flex;
@@ -12,6 +11,9 @@ body{
   gap: 20px;
 }
 
+.thirtyPrcWidth {
+  width: 50%;
+}
 .search-inputs {
   display: flex;
   flex-wrap: wrap;
