--- a/Frontend/ecommerce-app/src/app/signin-view/signin-view.component.css
+++ b/Frontend/ecommerce-app/src/app/signin-view/signin-view.component.css
@@ -1,26 +1,21 @@
+.wrapper {
+  justify-content: center;
+  align-items: center;
+  background-color: lightgray;
+}
+
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100%;
-    background-color: lightgray;
-    flex-direction: column; /* Add this line to change the flex direction to column */
-  }
-  
-  form {
-    width: 50%;
-    padding: 20px;
-    background-color: #f0f0f0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    text-align: left;
-  }
-  
-  
-  #back {
-    position: absolute;
-    bottom: 100px; /* Adjust this value to control the distance from the bottom */
-    left: 200px; /* Adjust this value to control the distance from the left */
-  }
-  
+  background-color: lightgray; 
+  padding: 100px; 
+  width: 50%;
+}
+
+.form-control {
+  width: 100%;
+  padding: 10px;
+  margin: 5px 0;
+}
+
+.btn {
+  margin: 10px 0;
+}
