--- a/Frontend/ecommerce-app/src/app/nav-bar-view/nav-bar-view.component.html
+++ b/Frontend/ecommerce-app/src/app/nav-bar-view/nav-bar-view.component.html
@@ -1,44 +1,55 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Ecommerce</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" routerLink="admin" *ngIf="this.isAdmin()">Admin menu</a>
-          </li>
-          <li class="nav-item dropdown" *ngIf="this.isAdmin()">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              Admin menu (2)
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Users</a></li>
-              <li><a class="dropdown-item" href="#">Products</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li>
-        </ul>
-        <form class="d-flex" class="unloggedOptions" *ngIf="!this.isLogged()">
-          <button class="btn btn-outline-success" type="submit" (click)="openSignInMenu()">Log in</button>
-          <button class="btn btn-outline-success" type="submit" (click)="openSignUpMenu()">Sign up</button>
-        </form>
-        <form class="d-flex" class="loggedOptions" *ngIf="this.isLogged()">
-            <button class="btn btn-outline-success">Welcome back, {{userName}}</button>
-          </form>
+  <div class="container-fluid">
+    <a class="navbar-brand" routerLink="">Ecommerce</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" (click)="openAdminMenu()" *ngIf="isAdmin()">Admin menu</a>
+        </li>
+        <li class="nav-item dropdown" *ngIf="isAdmin()">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Admin menu (2)
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" (click)="openUserAdminMenu()">Users</a></li>
+            <li><a class="dropdown-item" routerLink="/admin/products">Products</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
+      <form class="d-flex" *ngIf="!isLogged()">
+        <button class="btn btn-outline-success" type="button" (click)="openSignInMenu()">Log in</button>
+        <button class="btn btn-outline-success" type="button" (click)="openSignUpMenu()">Sign up</button>
+      </form>
+      <div class="d-flex" *ngIf="isLogged()">
+        <div class="dropdown">
+          <a class="btn btn-secondary dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+            Welcome back, {{ userName }}
+          </a>
+
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <li><a class="dropdown-item" href="#">My purchases</a></li>
+            <li><a class="dropdown-item" href="#">My profile</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" (click)="logout()">Logout</a></li>
+          </ul>
+        </div>
       </div>
     </div>
-  </nav>
-  
+  </div>
+</nav>
