--- a/Frontend/ecommerce-app/src/app/product-view/product-view.component.css
+++ b/Frontend/ecommerce-app/src/app/product-view/product-view.component.css
@@ -1,3 +1,4 @@
+
 body{
     margin: 0;
     font-weight: 400;
@@ -66,4 +67,8 @@ body{
 
   .unhidden{
     display: block;
+  }
+  
+  .backgroundColor {
+    background-color: #FAF9F8;
   }
