--- a/Frontend/ecommerce-app/src/app/create-product-admin-view/create-product-admin-view.component.html
+++ b/Frontend/ecommerce-app/src/app/create-product-admin-view/create-product-admin-view.component.html
@@ -1,35 +1,34 @@
+<div (click)="this.feedback=''">
+    <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Product Name</label>
+        <input type="text" class="form-control" placeholder="name">
+    </div>
 
-<div class="mb-3">
-    <label for="exampleFormControlInput1" class="form-label" >Product Name</label>
-    <input type="text" class="form-control"  placeholder="name" >
+    <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Description</label>
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="description" #desc>
+    </div>
+
+    <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Price</label>
+        <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="price" #price>
+    </div>
+
+    <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Brand</label>
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="brand" #brand>
+    </div>
+
+    <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Category</label>
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="category" #category>
+    </div>
+
+    <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Colours (separate colours between commas)</label>
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="colours" #colours>
+    </div>
 </div>
-
-<div class="mb-3">
-    <label for="exampleFormControlInput1" class="form-label" >Description</label>
-    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="description" #desc>
-</div>
-
-<div class="mb-3">
-    <label for="exampleFormControlInput1" class="form-label" >Price</label>
-    <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="price" #price>
-</div>
-
-<div class="mb-3">
-    <label for="exampleFormControlInput1" class="form-label" >Brand</label>
-    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="brand" #brand>
-</div>
-
-<div class="mb-3">
-    <label for="exampleFormControlInput1" class="form-label" >Category</label>
-    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="category" #category>
-</div>
-
-<div class="mb-3">
-    <label for="exampleFormControlInput1" class="form-label" >Colours (separate colours between commas)</label>
-    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="colours" #colours>
-</div>
-
-<button type="button" class="btn btn-primary" >Create product</button>
-<p>feed</p>
-<button type="button" class="btn btn-secondary" (click)="goBack()" >Go Back</button>
-
+<p *ngIf="!!feedback">{{feedback}}</p>
+<button type="button" class="btn btn-success" (click)="createProduct()">New product</button>
+<button type="button" class="btn btn-secondary" (click)="goBack()">Go Back</button>
