--- a/Frontend/ecommerce-app/src/app/create-user-by-admin/create-user-by-admin.component.html
+++ b/Frontend/ecommerce-app/src/app/create-user-by-admin/create-user-by-admin.component.html
@@ -1,4 +1,6 @@
-<form>
+<app-nav-bar-view></app-nav-bar-view>
+
+<form (click)="this.feedback=''">
     <div class="form-row">
       <div class="form-group col-md-6">
         <label>Name</label>
@@ -24,6 +26,6 @@
   </form>
 
   <button class="btn btn-primary" (click)="createUserData()">Create user</button>
-  <button class="btn btn-primary" (click)="goBack()">Go Back</button>
+  <button class="btn btn-secondary" (click)="goBack()">Go Back</button>
   
   <p>{{feedback}}</p>
