--- a/Frontend/ecommerce-app/src/app/signup-view/signup-view.component.html
+++ b/Frontend/ecommerce-app/src/app/signup-view/signup-view.component.html
@@ -1,21 +1,23 @@
+<app-nav-bar-view></app-nav-bar-view>
 <div class="container">
-<form>
-    
-      <label>Name</label>
-      <input type="text" class="form-control" placeholder="Enter name" #name>
+      <form>
 
-      <label>Email</label>
-      <input type="email" class="form-control" placeholder="Enter email" #email>
+            <label>Name</label>
+            <input type="text" class="form-control" placeholder="Enter name" #name>
 
-      <label>Address</label>
-      <input type="text" class="form-control" placeholder="Enter address" #address>
+            <label>Email</label>
+            <input type="email" class="form-control" placeholder="Enter email" #email>
 
-      <label>Password</label>
-      <input type="password" class="form-control" placeholder="Enter password" #password>
+            <label>Address</label>
+            <input type="text" class="form-control" placeholder="Enter address" #address>
 
-      <button type="button" class="btn btn-primary" (click)="signUpUser(name,email,address,password)">Sign up</button>
+            <label>Password</label>
+            <input type="password" class="form-control" placeholder="Enter password" #password>
 
-</form>  
-<p >{{feedbackMessage}}</p>
-<button (click)="goBack()" class="btn btn-primary" id="back">Go back</button>
+            <button type="button" class="btn btn-primary" (click)="signUpUser(name,email,address,password)">Sign
+                  up</button>
+
+      </form>
+      <p>{{feedbackMessage}}</p>
+      <button (click)="goBack()" class="btn btn-primary" id="back">Go back</button>
 </div>
