--- a/Frontend/ecommerce-app/src/app/update-product-view/update-product-view.component.html
+++ b/Frontend/ecommerce-app/src/app/update-product-view/update-product-view.component.html
@@ -29,10 +29,14 @@
         <label>Colours (separate them by commas)</label>
         <input type="text" class="form-control" #colours id="colours">
       </div>
+      <div class="form-group col-md-6">
+        <label>Stock</label>
+        <input type="number" class="form-control" #stock id="stock">
+      </div>
       
     </div>
   </form>
 
-  <button class="btn btn-primary" (click)="updateProduct(id,name,desc,pric,brand,category,colours)">Update changes</button>
+  <button class="btn btn-primary" (click)="updateProduct(id,name,desc,pric,brand,category,colours,stock)">Update changes</button>
   <button class="btn btn-secondary" (click)="goBack()">Go Back</button>
   <p>{{feedback}}</p>
