--- a/Frontend/ecommerce-app/src/app/product-view/product-view.component.html
+++ b/Frontend/ecommerce-app/src/app/product-view/product-view.component.html
@@ -45,7 +45,7 @@
 
           <p class="card-text">Colors:</p>
           <p class="card-text">{{getColors(product).join(',')}}</p>
-          <a href="#" class="btn btn-primary">Add to cart</a>
+          <a class="btn btn-primary" (click)="addProductToCart(product)">Add to cart</a>
         </div>
       </div>
     </div>
