--- a/Frontend/ecommerce-app/src/app/purchase-view/purchase-view.component.html
+++ b/Frontend/ecommerce-app/src/app/purchase-view/purchase-view.component.html
@@ -5,6 +5,41 @@
 <div *ngIf="hasCart()">
     <h3>Price:${{getPrice()}}</h3>
 </div>
+<div class="d-flex">
+    <div class="d-inline"> 
+        <div class="form-check form-switch">
+            <input class="form-check-input" type="radio" name="paymentMethod" id="Credit" (change)="onPaymentMethodChange('credit')" checked>
+            <label class="form-check-label" for="flexSwitchCheckChecked">Credit</label>
+        </div>
+        <div class="form-check form-switch">
+            <input class="form-check-input" type="radio" name="paymentMethod" id="BankDebit" (change)="onPaymentMethodChange('bankDebit')">
+            <label class="form-check-label" for="flexSwitchCheckDefault">Bank Debit</label>
+        </div>
+        <div class="form-check form-switch">
+            <input class="form-check-input" type="radio" name="paymentMethod" id="Paypal" (change)="onPaymentMethodChange('paypal')">
+            <label class="form-check-label" for="flexSwitchCheckDefault">Paypal</label>
+        </div>
+        <div class="form-check form-switch">
+            <input class="form-check-input" type="radio" name="paymentMethod" id="Paganza" (change)="onPaymentMethodChange('paganza')">
+            <label class="form-check-label" for="flexSwitchCheckDefault">Paganza</label>
+        </div>
+    </div>
+    <div class="container" class = "mw-75" *ngIf="paymentMethod.categoryName === 'bankDebit' ">
+        <label for="bankSelection">Select a bank:</label>
+        <select class="form-select" id="bankSelection" (change)="onBankChange($event)">
+            <option value="santander">Santander</option>
+            <option value="itau">Itaú</option>
+            <option value="bbva">BBVA</option>
+        </select>
+    </div>
+    <div class="container" class = "mw-75" *ngIf="paymentMethod.categoryName === 'credit' ">
+        <label for="flagSelection">Select a flag:</label>
+        <select class="form-select" id="flagSelection" (change)="onFlagChange($event)">
+            <option value="visa">visa</option>
+            <option value="masterCard">masterCard</option>
+        </select>
+    </div>
+</div>
 <div class="container-fluid" class="mh-100" >
     <div class="row justify-content-center text-center">
       <div class="col-md-3" *ngFor="let product of cartArray">
@@ -20,7 +55,7 @@
   
             <p class="card-text">Colors:</p>
             <p class="card-text">{{getColors(product).join(',')}}</p>
-            <a class="btn btn-primary" (click)="removeProductFromCart(product)">Remove from cart</a>
+            <a class="btn btn-primary" (click)="removeFromCart(product)">Remove from cart</a>
           </div>
         </div>
       </div>
