--- a/Frontend/ecommerce-app/src/app/purchase-view/purchase-view.component.html
+++ b/Frontend/ecommerce-app/src/app/purchase-view/purchase-view.component.html
@@ -4,27 +4,31 @@
 </div>
 <div *ngIf="hasCart()">
     <h3>Price:${{getPrice()}}</h3>
+    <button class="btn btn-outline-success" type="submit" (click)="purchase()">Purchase</button>
+</div>
+<div>
+    <h1>{{feedback}}</h1>
 </div>
 <div class="d-flex">
     <div class="d-inline"> 
         <div class="form-check form-switch">
-            <input class="form-check-input" type="radio" name="paymentMethod" id="Credit" (change)="onPaymentMethodChange('credit')" checked>
+            <input class="form-check-input" type="radio" name="paymentMethod" id="Credit" (change)="onPaymentMethodChange('CreditCard')" checked>
             <label class="form-check-label" for="flexSwitchCheckChecked">Credit</label>
         </div>
         <div class="form-check form-switch">
-            <input class="form-check-input" type="radio" name="paymentMethod" id="BankDebit" (change)="onPaymentMethodChange('bankDebit')">
+            <input class="form-check-input" type="radio" name="paymentMethod" id="BankDebit" (change)="onPaymentMethodChange('BankDebit')">
             <label class="form-check-label" for="flexSwitchCheckDefault">Bank Debit</label>
         </div>
         <div class="form-check form-switch">
-            <input class="form-check-input" type="radio" name="paymentMethod" id="Paypal" (change)="onPaymentMethodChange('paypal')">
+            <input class="form-check-input" type="radio" name="paymentMethod" id="Paypal" (change)="onPaymentMethodChange('PayPal')">
             <label class="form-check-label" for="flexSwitchCheckDefault">Paypal</label>
         </div>
         <div class="form-check form-switch">
-            <input class="form-check-input" type="radio" name="paymentMethod" id="Paganza" (change)="onPaymentMethodChange('paganza')">
+            <input class="form-check-input" type="radio" name="paymentMethod" id="Paganza" (change)="onPaymentMethodChange('Paganza')">
             <label class="form-check-label" for="flexSwitchCheckDefault">Paganza</label>
         </div>
     </div>
-    <div class="container" class = "mw-75" *ngIf="paymentMethod.categoryName === 'bankDebit' ">
+    <div class="container" class = "mw-75" *ngIf="paymentMethod.categoryName === 'BankDebit' ">
         <label for="bankSelection">Select a bank:</label>
         <select class="form-select" id="bankSelection" (change)="onBankChange($event)">
             <option value="santander">Santander</option>
@@ -32,7 +36,7 @@
             <option value="bbva">BBVA</option>
         </select>
     </div>
-    <div class="container" class = "mw-75" *ngIf="paymentMethod.categoryName === 'credit' ">
+    <div class="container" class = "mw-75" *ngIf="paymentMethod.categoryName === 'CreditCard' ">
         <label for="flagSelection">Select a flag:</label>
         <select class="form-select" id="flagSelection" (change)="onFlagChange($event)">
             <option value="visa">visa</option>
