--- a/Frontend/ecommerce-app/src/app/nav-bar-view/nav-bar-view.component.html
+++ b/Frontend/ecommerce-app/src/app/nav-bar-view/nav-bar-view.component.html
@@ -18,6 +18,7 @@
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" (click)="openUserAdminMenu()">Users</a></li>
             <li><a class="dropdown-item" routerLink="/admin/products">Products</a></li>
+            <li><a class="dropdown-item" routerLink="/admin/history">History</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
@@ -44,8 +45,8 @@
           </a>
 
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <li><a class="dropdown-item" href="#" *ngIf="isBuyer()">My purchases</a></li>
             <li><a class="dropdown-item" (click)="openProfileMenu()">My profile</a></li>
+            <li><a class = "dropdown-item" *ngIf="isBuyer()" (click)="openPurchaseHistory()">Previous purchases</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
