--- a/Frontend/ecommerce-app/src/app/product-view/product-view.component.html
+++ b/Frontend/ecommerce-app/src/app/product-view/product-view.component.html
@@ -1,60 +1,85 @@
 <div>
-  <h4>Filter products</h4>
-  <label>Name</label>
-  <input class="form-control me-2" type="search" placeholder="Name" #name>
-
-  <label>Brand</label>
-  <input class="form-control me-2" type="search" placeholder="Brand" #brand>
-
-  <label>Category</label>
-  <input class="form-control me-2" type="search" placeholder="Category" #category>
-
-  <label>Filter</label>
-
-  <div class="form-check">
-    <input class="form-check-input" name="operation" type="radio" checked (click)="this.operation='or'">
-    <label class="form-check-label" for="flexRadioDefault1">
-      Meet at least one
-    </label>
-  </div>
-  <div class="form-check">
-    <input class="form-check-input" name="operation" type="radio" (click)="this.operation='and'">
-    <label class="form-check-label" for="flexRadioDefault2">
-      Meet all
-    </label>
-  </div>
-
-  <button class="btn btn-outline-success" type="submit"
-    (click)="displayFilteredProducts(name.value, brand.value,category.value)">Search</button>
-  <button class="btn btn-outline-dark" type="submit" (click)="displayProducts()">Reset filters</button>
-
-</div>
-
-<div class="container-fluid" class="mh-100" >
-
-  <div class="row justify-content-center text-center">
-    <div class="col-md-3" *ngFor="let product of data">
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">{{ product.name }}</h5>
-          <h6 class="card-price">${{product.price }}</h6>
-
-          <p class="card-text">{{ product.brand.name }}</p>
-          <p class="card-text">{{ product.description }}</p>
-          <p class="card-text">{{ product.category.name }}</p>
-
-          <p class="card-text">Colors:</p>
-          <p class="card-text">{{getColors(product).join(',')}}</p>
-
-          <div class="btn-group" role="group" aria-label="Basic example">
-            <button type="button" class="btn btn-primary" [disabled]="productCounter(product)===0" (click)="removeFromCart(product)">-</button>
-            <button type="button" class="btn btn-light" readonly>{{productCounter(product)}}</button>
-            <button type="button" class="btn btn-primary" [disabled]="product.stock===productCounter(product)" (click)="addToCart(product)">+</button>
+  <h1>Filter products</h1>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <h3>Name</h3>
+        <input class="form-control me-2" type="search" placeholder="Name" #name>
+      </div>
+      <div class="col-sm">
+        <h4>Brands</h4>
+        <div class="radio-buttons" class="col-md-3">
+          <div class="form-check" *ngFor="let brand of brands; let i = index">
+            <input class="form-check-input" type="radio" name="brandRadio" [id]="'brandRadio' + i" [value]="brand"
+              [(ngModel)]="selectedBrand">
+            <label class="form-check-label" [for]="'brandRadio' + i">
+              {{ brand }}
+            </label>
           </div>
-          <p *ngIf="product.stock===productCounter(product)">No more items available</p>
         </div>
+      </div>
+      <div class="col-sm">
+        <h4>Categories</h4>
+        <div class="radio-buttons" class="col-md-3">
+          <div class="form-check" *ngFor="let cat of categories; let i = index">
+            <input class="form-check-input" type="radio" name="brandRadio" [id]="'brandRadio' + i" [value]="cat"
+              [(ngModel)]="selectedCategory">
+            <label class="form-check-label" [for]="'brandRadio' + i">
+              {{ cat }}
+            </label>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm">
+        <h4>Filter by</h4>
+        <div class="form-check">
+          <input class="form-check-input" name="operation" type="radio" checked (click)="this.operation='or'">
+          <label class="form-check-label" for="flexRadioDefault1">
+            Meet at least one
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" name="operation" type="radio" (click)="this.operation='and'">
+          <label class="form-check-label" for="flexRadioDefault2">
+            Meet all
+          </label>
+        </div>
+      </div>
+      <div class="col-sm">
+        <button class="btn btn-outline-success" type="submit"
+          (click)="displayFilteredProducts(name.value)">Search</button>
+        <br>
+        <button class="btn btn-outline-dark" type="submit" (click)="displayProducts()">Reset filters</button>
       </div>
     </div>
   </div>
-  
-</div>
+
+  <div class="container-fluid" class="mh-100">
+    <div class="row justify-content-center text-center">
+      <div class="col-md-3" *ngFor="let product of data">
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">{{ product.name }}</h5>
+            <h6 class="card-price">${{product.price }}</h6>
+
+            <p class="card-text">{{ product.brand.name }}</p>
+            <p class="card-text">{{ product.description }}</p>
+            <p class="card-text">{{ product.category.name }}</p>
+
+            <p class="card-text">Colors:</p>
+            <p class="card-text">{{getColors(product).join(',')}}</p>
+
+            <div class="btn-group" role="group" aria-label="Basic example">
+              <button type="button" class="btn btn-primary" [disabled]="productCounter(product)===0"
+                (click)="removeFromCart(product)">-</button>
+              <button type="button" class="btn btn-light" readonly>{{productCounter(product)}}</button>
+              <button type="button" class="btn btn-primary" [disabled]="product.stock===productCounter(product)"
+                (click)="addToCart(product)">+</button>
+            </div>
+            <p *ngIf="product.stock===productCounter(product)">No more items available</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
